tests/ui/suggestions/dont-suggest-foreign-doc-hidden.stderr
error[E0412]: cannot find type `Foo` in this scope
  --> $DIR/dont-suggest-foreign-doc-hidden.rs:10:16
   |
LL | pub fn test(_: Foo) {}
   |                ^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use local::Foo;
   |

error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/dont-suggest-foreign-doc-hidden.rs:13:17
   |
LL | pub fn test2(_: Bar) {}
   |                 ^^^ not found in this scope

error[E0412]: cannot find type `Baz` in this scope
  --> $DIR/dont-suggest-foreign-doc-hidden.rs:16:17
   |
LL | pub fn test3(_: Baz) {}
   |                 ^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use hidden_struct::Baz;
   |

error[E0412]: cannot find type `Quux` in this scope
  --> $DIR/dont-suggest-foreign-doc-hidden.rs:19:17
   |
LL | pub fn test4(_: Quux) {}
   |                 ^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use hidden_struct::Quux;
   |

error[E0277]: the trait bound `i32: Marker` is not satisfied
  --> $DIR/dont-suggest-foreign-doc-hidden.rs:25:13
   |
LL |     test5::<i32>();
   |             ^^^ the trait `Marker` is not implemented for `i32`
   |
help: the following other types implement trait `Marker`
  --> $DIR/auxiliary/hidden-struct.rs:31:1
   |
LL | impl Marker for Option<u32> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Option<u32>`
...
LL | impl Marker for Baz {}
   | ^^^^^^^^^^^^^^^^^^^ `Baz`
LL | impl Marker for Quux {}
   | ^^^^^^^^^^^^^^^^^^^^ `Quux`
note: required by a bound in `test5`
  --> $DIR/dont-suggest-foreign-doc-hidden.rs:22:13
   |
LL | fn test5<T: hidden_struct::Marker>() {}
   |             ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `test5`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0412.
For more information about an error, try `rustc --explain E0277`.
